fix(scrollbar): set scrollbar track color to transparent for light and dark modes

--- a/packages/core/src/global/scrollbar-vars.scss
+++ b/packages/core/src/global/scrollbar-vars.scss
@@ -1,12 +1,12 @@
 :root,
 .tds-mode-light {
-  --tds-scrollbar-track-color: var(--tds-grey-50);
+  --tds-scrollbar-track-color: transparent;
   --tds-scrollbar-thumb-color: var(--tds-grey-400);
   --tds-scrollbar-hover-thumb-color: var(--tds-grey-500);
 }
 
 .tds-mode-dark {
-  --tds-scrollbar-track-color: var(--tds-grey-850);
+  --tds-scrollbar-track-color: transparent;
   --tds-scrollbar-thumb-color: var(--tds-grey-500);
   --tds-scrollbar-hover-thumb-color: var(--tds-grey-400);
 }
